refactor: Replace experimental string templates with normal printf's + automatic refactoration